# samvada

./: .gitignore  Cargo.toml  README.md
src/: chat.rs  config.yml  goodbye.rs  greeting.rs  main.rs
src/chat/: _utils.rs  api.rs  ask.rs  config.rs  constants.rs  create.rs  frontmatter.rs  lint.rs  logging.rs  mod.rs  parser.rs  quick.rs
