[package]
name = "samvada"
version = "0.1.2"
edition = "2021"
description = "Chat with AI assistant in markdown file"
license = "MIT"
repository = "https://github.com/trendoraai/samvada"
readme = "README.md"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
config = "0.14.1"
dirs = "5.0.1"
dotenv = "0.15.0"
log = "0.4.20"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
time = { version = "0.3.30", features = ["macros"] }
tokio = { version = "1.34.0", features = ["full"] }
